--- a/src/input.css
+++ b/src/input.css
@@ -9,6 +9,7 @@
 }
 body {
   font-family: "Plus Jakarta Sans", sans-serif;
+  overflow-x: hidden;
 
   /* color: rgb(77, 77, 236); */
 }
@@ -68,4 +69,8 @@ body {
   color: #999;
   font-weight: 700;
   letter-spacing: 1px;
+}
+
+.skill-img-clr {
+  color: #162b35;
 }
